--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "bootstrap-icons": "^1.8.1",
     "esbuild": "^0.14.38",
     "jquery": "^3.6.0",
-    "lightgallery": "^2.4.0",
+    "lightbox2": "^2.11.3",
     "sass": "^1.51.0"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --loader:.woff=file --loader:.woff2=file --loader:.svg=file --loader:.ttf=file --loader:.gif=file",
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --loader:.woff=file --loader:.woff2=file --loader:.svg=file --loader:.ttf=file --loader:.gif=file --loader:.png=file",
     "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   }
 }
