--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "bootstrap-icons": "^1.8.1",
     "esbuild": "^0.14.38",
     "jquery": "^3.6.0",
-    "sass": "^1.51.0"
+    "sass": "^1.51.0",
+    "stimulus": "^3.0.1",
+    "stimulus-use": "^0.41.0"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --loader:.woff=file --loader:.woff2=file --loader:.svg=file --loader:.ttf=file --loader:.gif=file --loader:.png=file",
